    and entire build can now be done using provided scripts.
  * assistant: Clear the list of failed transfers when doing a full transfer
    scan. This prevents repeated retries to download files that are not
    available, or are not referenced by the current git tree.
  * indirect: Better behavior when a file in direct mode is not owned by
    the user running the conversion.

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Sep 2013 19:42:29 -0400

git-annex (4.20130920) unstable; urgency=low

  * webapp: Initial support for setting up encrypted removable drives.
  * Recommend using my patched gcrypt, which fixes some bugs:
    https://github.com/joeyh/git-remote-gcrypt
  * Support hot-swapping of removable drives containing gcrypt repositories.
  * list: New command, displays a compact table of remotes that
    contain files.
    (Thanks, anarcat for display code and mastensg for inspiration.)
  * fsck: Fix detection and fixing of present direct mode files that are
    wrongly represented as standin symlinks on crippled filesystems.
  * sync: Fix bug that caused direct mode mappings to not be updated
    when merging files into the tree on Windows.
  * sync: Don't fail if the directory it is run in gets removed by the
    sync.
  * addurl: Fix quvi audodetection, broken in last release.
  * status: In local mode, displays information about variance from configured
    numcopies levels. (--fast avoids calculating these)
  * gcrypt: Ensure that signing key is set to one of the participants keys.
  * webapp: Show encryption information when editing a remote.
  * Avoid unnecessarily catting non-symlink files from git, which can be
    so large it runs out of memory.

 -- Joey Hess <joeyh@debian.org>  Fri, 20 Sep 2013 10:34:51 -0400

git-annex (4.20130911) unstable; urgency=low

  * Fix problem with test suite in non-unicode locale.

 -- Joey Hess <joeyh@debian.org>  Wed, 11 Sep 2013 12:14:16 -0400

git-annex (4.20130909) unstable; urgency=low
