@@ -15,6 +15,8 @@ git-annex (4.20130921) UNRELEASED; urgency=low
     available, or are not referenced by the current git tree.
   * indirect: Better behavior when a file in direct mode is not owned by
     the user running the conversion.
+  * add, import, assistant: Better preserve the mtime of symlinks,
+    when when adding content that gets deduplicated.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 22 Sep 2013 19:42:29 -0400
 
